--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 # Logs
-logs
+logs/
 *.log
 npm-debug.log*
 yarn-debug.log*
@@ -7,42 +7,31 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
-node_modules
-dist
-dist-ssr
+# Dependencies / build output
+node_modules/
+dist/
+dist-ssr/
+.vite/
 *.local
 
-# Editor directories and files
+# Environment files
+.env
+.env.*
+!.env.example
+
+# Editor / IDE
 .vscode/*
 !.vscode/extensions.json
-.idea
+!.vscode/settings.json
+.idea/
+
+# OS cruft
 .DS_Store
+Thumbs.db
+
+# Windows / VS artifacts
 *.suo
 *.ntvs*
 *.njsproj
 *.sln
 *.sw?
-# Node / build
-node_modules/
-dist/
-.vite/
-
-# Logs
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-pnpm-debug.log*
-
-# Env & local
-.env
-.env.*
-!.env.example
-
-# Editor
-.vscode/*
-!.vscode/extensions.json
-!.vscode/settings.json
-
-# OS
-.DS_Store
-Thumbs.db
